site/styles/base/code.styl
// Inline Code
code
  padding 1px 6px
  font-size .95em
  color inherit
  background-color white - 5%
  border-radius 3px
  word-break break-word
  font-family Menlo, Monaco, monospace

// Code Blocks
pre
  rhythm()

code.hljs
  pad()
  overflow-x scroll
  white-space pre-wrap
  word-break normal

